gl31-master/src/test/deca/syntax/valid/complet/class_meth_asm.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succès
//
// Historique:
//    cree le 19/01/2021
class Test{
    void methodeTest(int param1, float param2) asm ("string");
}

