gl31-master/src/test/deca/syntax/invalid/complet/meth_asm_string2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, '"' manquant
//
// Historique:
//    cree le 19/01/2021
class Test{
    void methodeTest(int param1, float param2) asm ("multi line string);
}
